[gd_scene load_steps=7 format=3 uid="uid://jpel4dfak3mm"]

[ext_resource type="PackedScene" uid="uid://b3l8pjglwhk1g" path="res://Scenes/grid_map.tscn" id="1_jjgbg"]
[ext_resource type="Script" uid="uid://dxa5m7dv0fs3j" path="res://Scripts/game_scene.gd" id="1_lohlh"]
[ext_resource type="Texture2D" uid="uid://t4ay36k6mtvi" path="res://Resources/UI/Buttons/button_round_border.png" id="2_4bvgx"]
[ext_resource type="Texture2D" uid="uid://djxhp4s0yjp3y" path="res://Resources/Towers/towerDefense_tile249.png" id="3_3mbwn"]
[ext_resource type="Script" uid="uid://dejioli3i5fyo" path="res://Scripts/ui.gd" id="3_kilg5"]
[ext_resource type="Texture2D" uid="uid://4xvu43538p0d" path="res://Resources/Towers/towerDefense_tile251.png" id="4_jwv4s"]

[node name="GameScene" type="Node2D" node_paths=PackedStringArray("BaseLayer", "BuildingLayer", "OutlineLayer")]
script = ExtResource("1_lohlh")
BaseLayer = NodePath("GridMap/BaseLayer")
BuildingLayer = NodePath("GridMap/BuildingLayer")
OutlineLayer = NodePath("GridMap/OutlineLayer")

[node name="GridMap" parent="." instance=ExtResource("1_jjgbg")]

[node name="BuildingLayer" parent="GridMap" index="2"]
modulate = Color(1, 1, 1, 1)

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("3_kilg5")

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BuildBar" type="HBoxContainer" parent="UI/HUD"]
custom_minimum_size = Vector2(1000, 200)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -139.0
offset_right = 500.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 0

[node name="Gun" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("2_4bvgx")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="UI/HUD/BuildBar/Gun"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -50.0
offset_right = 56.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_3mbwn")

[node name="Missile" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("2_4bvgx")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="UI/HUD/BuildBar/Missile"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -100.0
offset_right = 101.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_jwv4s")

[editable path="GridMap"]
